# BaconBox-OLD

./: .gitignore  .hgignore  Android.mk  CMakeLists.txt  README.markdown  clean.bat  compile.bat  configure  configure.bat  instructions.box  readme.txt
BaconBox/: BaconBox.h  glxew.h
BaconBox/BaconBox/: BodyManager.h  Console.cpp  Console.h  DebugState.cpp  DebugState.h  Engine.cpp  Engine.h  Factory.h  PlatformFlagger.h  ResourceDefinition.cpp  ResourceDefinition.h  ResourceManager.cpp  ResourceManager.h  ResourcePointer.h  Side.h  SimpleBodyManager.h  State.cpp  State.h  Vector2.cpp  Vector2.h
BaconBox/BaconBox/Audio/: AudioEngine.cpp  AudioEngine.h  AudioState.h  BackgroundMusic.cpp  BackgroundMusic.h  MusicEngine.cpp  MusicEngine.h  MusicInfo.cpp  MusicInfo.h  MusicParameters.cpp  MusicParameters.h  NullAudio.cpp  NullAudio.h  NullAudioEngine.cpp  NullAudioEngine.h  Sound.cpp  Sound.h  SoundEngine.cpp  SoundEngine.h  SoundFX.cpp  SoundFX.h  SoundInfo.cpp  SoundInfo.h  SoundParameters.cpp  SoundParameters.h
BaconBox/BaconBox/Display/: Animatable.cpp  Animatable.h  AnimationDefinition.cpp  AnimationDefinition.h  AxisAlignedBoundingBox.cpp  AxisAlignedBoundingBox.h  BatchedBody.cpp  BatchedBody.h  BatchedGraphic.h  BatchedGraphicElement.h  BatchedInanimateGraphicElement.h  BatchedInanimateSprite.h  BatchedSprite.h  BatchedVertexArray.h  Camera.cpp  Camera.h  Collidable.cpp  Collidable.h  CollisionDetails.cpp  CollisionDetails.h  Color.cpp  Color.h  ColorFormat.h  Colorable.cpp  Colorable.h  Deactivable.cpp  Deactivable.h  Disableable.cpp  Disableable.h  FrameArray.h  FrameDetails.cpp  FrameDetails.h  Graphic.h  GraphicElement.h  Hidable.cpp  Hidable.h  Inanimate.cpp  Inanimate.h  InanimateGraphicElement.h  InanimateSprite.h  (+56 more)
BaconBox/BaconBox/Emitter/: Emitter.cpp  Emitter.h  Particle.h  ParticleEmitter.h  ParticlePhase.cpp  ParticlePhase.h  SpriteEmitter.cpp  SpriteEmitter.h
BaconBox/BaconBox/Helper/: AlgorithmHelper.h  Base64.cpp  Base64.h  BitHelper.cpp  BitHelper.h  CArray.h  CallHelper.h  CollisionGroup.cpp  CollisionGroup.h  Compression.cpp  Compression.h  CompressionMethod.h  DeleteHelper.h  Ease.h  FlagSet.h  IsBaseOf.h  IsNumber.h  IsSame.h  Iterators.h  MathHelper.cpp  MathHelper.h  Parser.cpp  Parser.h  Pool.h  Random.cpp  Random.h  Range.h  ResourcePathHandler.cpp  ResourcePathHandler.h  SafeEnum.h  ShapeFactory.cpp  ShapeFactory.h  SpriteFactory.cpp  SpriteFactory.h  StackPool.h  StaticAssert.h  Stopwatch.cpp  Stopwatch.h  StringHelper.h  (+9 more)
CMake/configureScript/: configure-iphone  configure-iphone-simulator  configure-iphone-simulator2
CMake/module/: Function.cmake
CMake/toolchain/: iphone-simulator.toolchain  iphone.toolchain
RedBox/: Debug.h  Factory.h  PlatformFlager.h  PlatformFlagger.h  RedBox.h  Sources.cmake
RedBox/Audio/: AudioEngine.cpp  AudioEngine.h  AudioState.h  BackgroundMusic.cpp  BackgroundMusic.h  MusicEngine.h  MusicInfo.h  MusicParameters.cpp  MusicParameters.h  RBIPhoneBackgroundMusic.m  RBIPhoneSound.h  RBIPhoneSound.m  Sound.h  SoundEngine.cpp  SoundEngine.h  SoundFX.cpp  SoundFX.h  SoundInfo.cpp  SoundInfo.h  SoundParameters.h
RedBox/Display/: AnimationParameters.cpp  AnimationParameters.h  ColorFormat.h  GraphicBody.cpp  GraphicBody.h  Link.cpp  Link.h  LinkData.cpp  LinkData.h  PixMap.cpp  PixMap.h  RenderInfo.cpp  RenderInfo.h  RenderStep.cpp  RenderStep.h  RenderStepMode.h  Renderable.cpp  Renderable.h  Sprite.cpp  Sprite.h  SpriteEmitter.cpp  SpriteEmitter.h
RedBox/Helper/: BitHelper.cpp  BitHelper.h  Convert.cpp  Convert.h  MathHelper.cpp  MathHelper.h  Parser.cpp  Random.cpp  Random.h  ResourceHelper.h  ResourcePathHandler.cpp  ResourcePathHandler.h  SpriteFactory.cpp  SpriteFactory.h  StringHelper.cpp  StringHelper.h  TimeHelper.cpp  TimeHelper.h
RedBox/Input/: InputDevice.h  InputManager.cpp  InputManager.h  InputSignalData.cpp  InputSignalData.h  InputState.cpp
RedBox/Redbox/: AABB.cpp  AABB.h  BodyManager.h  CollisionData.h  Console.cpp  Console.h  Debug.h  DebugState.cpp  DebugState.h  Engine.cpp  Engine.h  Factory.h  Layer.cpp  Layer.h  Object.cpp  Object.h  PlatformFlagger.h  RedBoxEngine.cpp  RedBoxEngine.h  ResourceDefinition.cpp  ResourceDefinition.h  ResourceManager.cpp  ResourceManager.h  ResourcePointer.h  Side.h  SimpleBodyManager.h  Sources.cmake  State.cpp  State.h  Vec2.cpp  Vec2.h  Vector2.cpp  Vector2.h  Vertex.cpp  Vertex.h  VerticesGroup.cpp  VerticesGroup.h  glew.c  glew.cpp
RedBox/SignalSlots/: SignalAnalyzer.h  SignalAnalyzerManager.cpp
RedBox/States system/: RedBoxEngine.cpp  RedBoxEngine.h  RedboxEngine.cpp  RedboxEngine.h  State.cpp  State.h
RedBox/StatesSystem/: RedBoxEngine.cpp  RedBoxEngine.h  State.cpp  State.h
RedBox/other/: Edge.cpp  Edge.h  ResourceLoader.cpp  ResourceLoader.h  ResourceManager.cpp  ResourceManager.h  State.cpp  TextureInfo.cpp  TextureInfo.h  Vec2.cpp  Vec2.h  Vertex.cpp  Vertex.h  VerticesGroup.cpp  VerticesGroup.h
android/: AndroidManifest.xml
android/jni/: Android.mk  Application.mk  BaconBoxNativeActivity.cpp  Loader.h  PlayState.cpp  PlayState.h  RedBoxNativeActivity.cpp  main.cpp
ide/QtCreator/: BaconBox.pro  QtBaconBox.cpp  QtBaconbox.h  QtRedbox.cpp  RedBox.pro
ide/Xcode/: RedboxEngine_Prefix.pch
libraries/: freetype.desc  gl.desc  jsonbox.desc  libogg.desc  libpng.desc  libraries.desc  libvorbis-tremor.desc  libvorbis.desc  sdl.desc  sdl12.desc  sdl2.desc  sdl_mixer.desc  sdl_mixer_SDL2.desc  sigly.desc  simple-image.custom.tar.bz2  simple-image.desc  tinyxml.desc  zlib.desc
libraries/Finch/: Sound.h  Sound.m
libraries/release_tools/: README  libvorbis-tremor.sh
libraries/simple-image/: makefile  simple-image-debug.c  simple-image-debug.h  simple-image-png.c  simple-image.c  simple-image.h
meta/: astylerc
meta/documentation/: Doxyfile  generate.sh
meta/tiled/: baconbox_types.xml  redbox_types.xml  style.css  tiled_properties.markdown
script/: linkscript.sh
script/Windows/: compile-windows.sh  configure-windows.sh
script/libbuildtool/: current  iphone-universal
script/libraries_release_tools/: SDL.sh  libvorbis-tremor.sh
(+871 files in other folders)
